# caligo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  app.json  config.env_sample  docker-compose.yml  genSession.py  generate_session.py  heroku.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  sampe_config.toml  sample_config.toml  session.py  string_session.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: container.yml
RobOto/: __init__.py  __main__.py
RobOto/core/: __init__.py  client.py  pool.py  raw_client.py
RobOto/core/extention/: __init__.py  pool.py
RobOto/core/logging/: __init__.py
RobOto/core/method/: __init__.py
RobOto/core/method/decorator/: __init__.py  command.py  command_ext.py  on_command.py
RobOto/core/method/util/: __init__.py  restart.py  shutdown.py
RobOto/modules/: core.py
RobOto/modules/system/: __init__.py  ping.py  shutdown.py
RobOto/util/: config.py
bish/: logging.py
caligo/: __init__.py  command.py  conversation.py  launch.py  listener.py  log.py  logging.py  main.py  module.py
caligo/core/: __init__.py  base.py  bot.py  command_dispatcher.py  conversation_dispatcher.py  database.py  database_provider.py  event_dispatcher.py  module_extender.py  telegram_bot.py
caligo/core/database/: __init__.py  base.py  change_stream.py  client.py  client_session.py  collection.py  command_cursor.py  cursor.py  cursor_base.py  db.py  errors.py  storage.py  typings.py
caligo/custom_modules/: __init__.py  example.py  google.py
caligo/modules/: aria.py  aria2.py  core.py  debug.py  echo.py  gdrive.py  heroku.py  magisk.py  main.py  misc.py  moderation.py  network.py  ping.py  purge.py  stats.py  sticker.py  stickers.py  system.py  text.py
caligo/util/: __init__.py  aria.py  aria2.py  async_helpers.py  config.py  db.py  file.py  git.py  google_drive.py  misc.py  mongkey.py  silent.py  text.py  tg.py  time.py
caligo/util/db/: change_stream.py  client.py  client_session.py  collection.py  command_cursor.py  cursor.py  cursor_base.py  db.py
roboto/: __init__.py  __main__.py  launch.py  logging.py  main.py  module.py
roboto/core/: __init__.py  base.py  client.py  command.py  custom_filter.py  filters.py  module.py  module_extender.py  pool.py
roboto/modules/: core.py  ping.py  shutdown.py
roboto/util/: __init__.py  async_helpers.py  config.py  restart.py  shutdown.py
