#
# Packaging
#

[tool.poetry]
name = "caligo"
version = "1.0.0"
description = "selfbot for Telegram."
authors = ["Adek Maulana <adek@techdro.id>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adekmaulana/caligo"
documentation = "https://github.com/adekmaulana/caligo/blob/master/README.md"

# Search info
keywords = ["chat", "telegram", "selfbot", "telegram-bot", "pyrogram"]
classifiers = [
    "Development Status :: 2 - Staging",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Linux/macOS",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adekmaulana/caligo/issues"
"Community" = ""

[tool.poetry.dependencies]
python = "^3.8"

# Core
aiohttp = "^3.8.0"
aiorun = "^2021.10.1"
colorlog = "^6.4.1"
pymongo = "^3.12.1"
Pyrogram = "^2.0.30"
python-dotenv = "^0.19.0"
TgCrypto = "^1.2.2"

# Core Extra
dnspython = "^2.1.0"

# Aria
aioaria2 = "^1.3.3"

# System
meval = "^2.5"
GitPython = "^3.1.24"
speedtest-cli = "^2.1.3"
# Debug
beauty-print = "^0.6.1"

# GoogleDrive
google-api-python-client = "^2.29.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"

# Util
aiofile = "^3.7.2"
aiopath = "<0.6.0"
beautifulsoup4 = "^4.10.0"
emoji = "^1.6.0"
Pillow = "^8.3.2"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
isort = {version = "^5.7.0", extras = ["pyproject"]}
mypy = "^0.910"
pre-commit = "^2.15.0"
yapf = "^0.31.0"

[tool.poetry.scripts]
caligo = "caligo.main:main"

#
# Code formatting
#

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


#
# Build system (for pip)
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
