#
# Packaging
#

[tool.poetry]
name = "caligo"
version = "1.0.0"
description = "selfbot for Telegram."
authors = ["Adek Maulana <adek@techdro.id>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adekmaulana/caligo"
documentation = "https://github.com/adekmaulana/caligo/blob/master/README.md"

# Search info
keywords = ["chat", "telegram", "selfbot", "telegram-bot", "pyrogram"]
classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
]

[tool.poetry.scripts]
caligo = "caligo.main:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adekmaulana/caligo/issues"
"Community" = ""

[tool.poetry.dependencies]
python = "~=3.9"

aiohttp = "^3.8.5"
aiopath = [
    {version = "^0.5.12", python = "<3.10"},
    {version = "^0.6.11", python = ">=3.10"},
]
aiorun = "^2023.7.2"
beauty-print = "^0.6.1"
certifi = {version = "^2023.7.22", platform = "windows"}
colorlog = "^6.7.0"
emoji = "^2.7.0"
gitpython = "^3.1.40"
meval = "^2.5"
pillow = "^10.0.0"
pymongo = "^4.3.3"
pyrofork = "^2.2.2"
speedtest-cli = "^2.1.3"
tomli = {version = "^2.0.1", python = "<3.11"}
TgCrypto = "^1.2.5"
uvloop = {version = "^0.17.0", platform = "linux"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"
pylint = "^2.17.1"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"


#
# Code formatting
#

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


#
# Build system (for pip)
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
